<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:src="@drawable/img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_big"
            android:id="@+id/imgBird"/>

        <LinearLayout
            android:id="@+id/ltAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_big"
            android:layout_below="@id/imgBird"
            android:paddingLeft="@dimen/margin_big"
            android:paddingRight="@dimen/margin_big">

            <EditText
                android:id="@+id/inpEmail"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#4c4c4c"
                android:lineSpacingExtra="16sp"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/inpPassword"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#4c4c4c"
                android:lineSpacingExtra="16sp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="#4c4c4c"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/registration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="#4c4c4c"
                    android:lineSpacingExtra="12sp"
                    android:gravity="end"
                    android:text="@string/forgot_pass"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnNext"
                style="@style/nextButton"
                android:layout_centerInParent="true"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="@dimen/margin_standart"
                android:layout_marginRight="@dimen/margin_standart"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textStyle="bold"
                android:text="@string/not_all_fields"
                android:enabled="false"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ltAuth"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_standart"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="10sp"
            android:text="@string/use_social"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal"/>
    </RelativeLayout>

    </ScrollView>


</LinearLayout>
